# hofbuildathon2026

./: .gitignore  =  OfficialRun.py  README.md  connection.py  databricks.yml  datatest.py  faker_code  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
app/node1_extract/: databricks_node.py
app/node2_reason/: nemotron_node.py
app/node3_verify/: output_checker.py
app/offer_workflow/: run.py  state.py
app/services/: __init__.py  databricks_service.py  evaluation_engine.py  llm_exceptions.py  nemotron_client.py  pdf_reader.py  scoring.py
app/utils/: redaction.py
data/: claude_gen_v2.py  claude_generate.py  databast_test.csv  faker_code.py  market_data_intelligent.csv
frontend/src/: App.tsx  index.css
frontend/src/components/: DemoLoginModal.tsx  Navbar.tsx
frontend/src/hooks/: use-profile.ts
frontend/src/lib/: demo-users.ts
frontend/src/pages/: Analyzing.tsx  Dashboard.tsx  Index.tsx  ProfileSetup.tsx  Results.tsx  Submission.tsx
hofbuildathon2026.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/: test_evaluate_integration.py  test_evaluation_engine.py  test_main_llm_error_mapping.py  test_nemotron_client.py  test_pdf_reader.py  test_scoring.py
